@@ -10,6 +10,7 @@ Build-Depends: bison,
                cmake,
                debhelper (>= 8.1.3~),
                dh-apparmor,
+               dh-systemd (>= 1.5),
                dpkg-dev (>= 1.16.1~),
                gawk,
                libaio-dev[linux-any],
